reverting the ng-repeat changes and stopped horizontal scrolling

--- a/styles/default.css
+++ b/styles/default.css
@@ -17,7 +17,7 @@ body {
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
-    overflow: hidden;
+    overflow-x: hidden;
 }
 
 .contenthome {
